--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,29 @@
   "private": true,
   "dependencies": {
     "react-bootstrap": "^2.7.2",
+    "react-scripts": "^5.0.1",
     "web3": "^1.9.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "build-popup": "set \"INLINE_RUNTIME_CHUNK=false\" && react-scripts build"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "web-vitals": "^3.3.1"
   }
 }
