--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,25 +1,22 @@
 {
   "name": "NFT Defender",
   "version": "1.0",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "description": "Checks the security of NFTs on Opensea",
-  "default_popup": "index.html",
-  "browser_action": {
+  "action": {
     "default_popup": "index.html",
+    "default_title": "Open the popup",
     "default_icon": {
-      "48": "icon48.png"
+      "48": "logo192.png"
     }
   },
   "permissions": [
     "tabs",
     "activeTab",
     "storage",
-    "https://*/*",
-     "http://*/*", 
-     "contextMenus"
+    "contextMenus"
   ],
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
   "icons": {
-    "48": "icon48.png"
+    "48": "logo192.png"
   }
 }
