--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "NFT Defender",
-  "version": "1.0",
+  "version": "1.1",
   "manifest_version": 3,
   "description": "Checks the security of NFTs on Opensea",
   "action": {
@@ -10,10 +10,18 @@
       "48": "logo192.png"
     }
   },
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["injectWarning.js"],
+      "run_at": "document_start"
+    }
+  ],
   "permissions": [
     "tabs",
     "activeTab",
     "storage",
+    "scripting",
     "contextMenus"
   ],
   "icons": {
