--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -7,7 +7,7 @@
     "default_popup": "index.html",
     "default_title": "Open the popup",
     "default_icon": {
-      "48": "logo192.png"
+      "48": "logo.png"
     }
   },
   "content_scripts": [
