--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.3.0",
-    "mongoose": "^7.1.0",
-    "nodemon": "^2.0.22"
+    "mongoose": "^7.1.0"
   }
 }
